<resources>
    <!-- MENU -->
    <string name="app_name">Vokabeltrainer</string>
    <string name="ic_help">Hilfe</string>
    <string name="ic_home">Home</string>
    <string name="ic_achievement">Erfolg</string>
    <string name="ic_setting">Einstellungen</string>

    <!-- OPTIONS -->
    <string name="woerterbuch">Wörterbuch\n</string>
    <string name="lektionen">Wörter nach\nLektionen</string>
    <string name="aufgabe">Testen \u0026 Üben</string>
    <string name="ex_translation">Worttest</string>
    <string name="ex_kontext">Kontexttest</string>
    <string name="status">Status</string>

    <!-- SETTINGS -->
    <string name="setting">Einstellungen</string>
    <string name="setting_btn_to_wordtest">Für Worttest</string>
    <string name="setting_btn_to_kontexttest">Für Kontexttest</string>
    <string name="setting_btn_for_reset">Reset</string>
    <string name="setting_wordtest">Einstellungen: Worttest</string>
    <string name="setting_kontexttest">Einstellungen: Kontexttest</string>

    <!--  -->
    <string name="first_sentence">Für den ersten Satz</string>
    <string name="second_sentence">Für den zweiten Satz</string>
    <string name="third_sentence">Für den dritten Satz</string>
    <string name="hint">Für den Hinweis-Satz</string>
    <string name="first">1. Wahl</string>
    <string name="second">2. Wahl</string>
    <string name="third">3. Wahl</string>
    <string name="gdex">GDEX</string>
    <string name="learner">Verständnis</string>
    <string name="book">Buch</string>
    <string name="easy">Einfach</string>
    <string name="middle">Mittel</string>
    <string name="hard">Schwer</string>

    <!-- ACHIEVEMENT -->
    <string name="achievement_g_1"><b>Aller Anfang ist... Richtig</b>\n\nGratulation du hast dein
        erstes Richtiges Wort</string>
    <string name="achievement_g_2"><b>Aller Anfang ist... Schwer</b>\n\nAller Anfang ist schwer,
        jetzt kann es nur noch besser werden! </string>
    <string name="achievement_g_3"><b>7 Zwerge</b>\n\nEs sind schon 7 Zwerge, ich meinte richtige Wörter</string>
    <string name="achievement_g_4"><b>10</b>\n\nEs sind 10 Richtige Wörter (oder 2?)</string>
    <string name="achievement_g_5"><b>100%</b>\n\nNoch nicht ganz, aber du bist schon auf dem besten Weg dahin (100 Wörter)</string>
    <string name="achievement_g_6"><b>1001 Nacht ich meinte Wort</b>\n\nJetzt kannst du schon Geschichten schreiben</string>
    <string name="achievement_g_7"><b>Ein langer Kampf</b>\n\nDas erste Wort in Kategorie 7</string>

    <string name="Sent_Missing">:SENTENCE MISSING:</string>
    <string name="DBHandler_ProgressDialog_Title">Database Update</string>
    <string name="DBHandler_ProgressDialog_Message">Loading updated data…</string>

    <string name="Exercise_TrainAndTest">Lernen&amp;Testen</string>
    <string name="TrainTest_InitializeModel">Das Model wird initialisiert…</string>
    <string name="TrainTest_LoadingModel">Das Model wird geladen…</string>
    <string name="TrainTest_CalculatingWord">Suche nach neuem Wort...</string>
    <string name="TrainTest_InitialDownload">Einstellungen werden zum ersten Mal durchgeführt…</string>
    <string name="TrainTest_MissingWord">Es gibt keine Wörter mehr!</string>
    <string name="TrainTest_Answer"><![CDATA[Die korrekte Übersetzung für <b><i>%1$s</i></b> ist <b><i>%2$s</i></b>.]]></string>
    <string name="TrainTest_Close"><![CDATA[Fast! Die korrekte Übersetzung für <b><i>%1$s</i></b> ist nicht <i>%2$s</i>, sondern <b><i>%3$s</i></b>.]]></string>
    <string name="TrainText_Incorrect"><![CDATA[Es tut mir leid, aber <i><b>%1$s</b></i> ist nicht korrekt.  Das korrekte Wort ist <i><b>%2$s</b></i>.]]></string>
    <string name="TrainText_Correct">Glückwunsch, das ist korrekt.</string>

    <string name="SettingSentences">Hier kannst du ändern was für Beispielsätze du haben möchtest.</string>

</resources>
