<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/lay_überschrift"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/btn_go_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back_black_24px"
            />

        <TextView
            android:text="@string/setting"
            android:paddingLeft="10dp"
            android:background="@drawable/ic_ueberschrift_hintrgrund"
            android:layout_centerVertical="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btn_go_back"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/lay_überschrift"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_setting_wordtrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_btn_to_wordtest"
            android:layout_weight="2"
            android:background="@drawable/ic_sprechblase_main"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/btn_setting_kontexttrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_btn_to_kontexttest"
            android:layout_weight="2"
            android:background="@drawable/ic_sprechblase_auswahl"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/btn_setting_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_btn_for_reset"
            android:layout_weight="1"
            android:background="@drawable/ic_sprechblase_main"/>
    </LinearLayout>
</RelativeLayout>