<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_hintergrund"
    tools:context="com.example.kathrin1.vokabeltrainer_newlayout.MainActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:layout_marginRight="20dp"
                    android:text="@string/woerterbuch"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/btn_dict"
                    android:background="@drawable/ic_sprechblase_main"
                    android:layout_weight="1"/>

                <Button
                    android:text="@string/lektionen"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/btn_lektion"
                    android:background="@drawable/ic_sprechblase_main"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:text="@string/aufgabe"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/btn_aufgabe"
                    android:background="@drawable/ic_sprechblase_main"
                    android:layout_weight="1"/>

                <Button
                    android:text="@string/status"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/btn_status"
                    android:background="@drawable/ic_sprechblase_main_rechts"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_book_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_buch"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
