<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lay_überschrift"
        android:background="@drawable/ic_ueberschrift_hintrgrund"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_first_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_sentence" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_first_sentence"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_1st_sent_1st_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first" />

                    <RadioGroup
                        android:id="@+id/rbtn_1st_sent_1st_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_1st_book"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/book" />

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_1st_learner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/learner" />

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_1st_gdex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gdex" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_1st_sent_2nd_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/second" />

                    <RadioGroup
                        android:id="@+id/rbtn_1st_sent_2nd_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_2nd_book"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/book" />

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_2nd_learner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/learner" />

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_2nd_gdex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gdex" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_1st_sent_3rd_option"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/third" />

                    <RadioGroup
                        android:id="@+id/rbtn_1st_sent_3rd_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_3rd_book"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/book" />

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_3rd_learner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/learner" />

                        <RadioButton
							android:onClick="onRadioButtonClicked"
                            android:id="@+id/rbtn_1st_sent_3rd_gdex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gdex" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/lay_überschrift"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/setting_wordtest"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/ic_ueberschrift_hintrgrund"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>
