<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_button_exercise">

                <ImageView
                    android:id="@+id/iv_achievement_g1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_achievement_trophy" />

                <TextView
                    android:id="@+id/txt_achievement_g1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/achievement_g_1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_button_exercise">

                <ImageView
                    android:id="@+id/iv_achievement_g2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_achievement_trophy_locked" />

                <TextView
                    android:id="@+id/txt_achievement_g2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/achievement_g_2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_button_exercise">

                <ImageView
                    android:id="@+id/iv_achievement_g3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_achievement_trophy_locked" />

                <TextView
                    android:id="@+id/txt_achievement_g3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/achievement_g_3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_button_exercise">

                <ImageView
                    android:id="@+id/iv_achievement_g4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_achievement_trophy_locked" />

                <TextView
                    android:id="@+id/txt_achievement_g4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/achievement_g_4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_button_exercise">

                <ImageView
                    android:id="@+id/iv_achievement_g5"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_achievement_trophy_locked" />

                <TextView
                    android:id="@+id/txt_achievement_g5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/achievement_g_5" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_button_exercise">

                <ImageView
                    android:id="@+id/iv_achievement_g6"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_achievement_trophy_locked" />

                <TextView
                    android:id="@+id/txt_achievement_g6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/achievement_g_6" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_button_exercise">

                <ImageView
                    android:id="@+id/iv_achievement_g7"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:srcCompat="@drawable/ic_achievement_trophy_locked" />

                <TextView
                    android:id="@+id/txt_achievement_g7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/achievement_g_7" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>