<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_hintergrund"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:clipToPadding="false">

        <Button
            android:id="@+id/btn_go_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back_black_24px"
            />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_below="@id/btn_go_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="80dp">

            <Button
                android:id="@+id/btn_open_kartei"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5mm"
                android:layout_marginRight="5mm"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/ic_sprechblase_auswahl"
                android:text="@string/ex_translation" />

            <Button
                android:id="@+id/btn_open_kontext"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5mm"
                android:layout_marginRight="5mm"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/ic_sprechblase_auswahl"
                android:text="@string/ex_kontext" />

            <Button
                android:id="@+id/btn_open_ex3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5mm"
                android:layout_marginRight="5mm"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/ic_sprechblase_auswahl"
                android:text="@string/Exercise_TrainAndTest" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:layout_above="@+id/btn_menu"
        android:id="@+id/btn_book_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_buch"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
